--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,7 +9,7 @@
   .title-area {
     
     .name {
-      background: url('../logo.png') no-repeat center;
+      background: url('../logo.png') no-repeat 25px center;
       padding-left: 50px;
       
       a {
